<resources>
    <string name="app_name">app_figma1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Iniciar sesion</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio">Inicio</string>
    <string name="ordena_en_l_nea">Ordena en Línea</string>
    <string name="men">Menú</string>
    <string name="promociones">Promociones</string>
    <string name="tiendas">Tiendas</string>
    <string name="pizza_tracker">Pizza Tracker</string>

    <string-array name="opciones_direccion">
        <item>Casa</item>
        <item>Departamento</item>
        <item>Hotel</item>
        <item>Negocio</item>
        <item>Otros lugares</item>
    </string-array>
    <string name="title_activity_food">FoodActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>