<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.app_figma1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.app_figma1.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.app_figma1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_pizza"
        android:name="com.example.app_figma1.ui.food.pizzas.PizzaFragment"
        tools:layout="@layout/fragment_pizza"/>
    <fragment
        android:id="@+id/nav_dulce"
        android:name="com.example.app_figma1.ui.food.dulces.DulceFragment"
        tools:layout="@layout/fragment_dulce"/>
    <fragment
        android:id="@+id/nav_salado"
        android:name="com.example.app_figma1.ui.food.salados.SaladoFragment"
        tools:layout="@layout/fragment_salado"/>
    <fragment
        android:id="@+id/nav_bebida"
        android:name="com.example.app_figma1.ui.food.bebidas.BebidaFragment"
        tools:layout="@layout/fragment_bebida"/>
</navigation>